[gd_scene load_steps=4 format=3 uid="uid://c1escud6u8nm"]

[ext_resource type="Texture2D" uid="uid://twtr5lo2l4hv" path="res://graphics/player/player.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://e8lvsb385ba6" path="res://scenes/player/player.gd" id="1_dovo2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 68.0074

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_dovo2")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(37, 2)
rotation = 1.5708
texture = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dovo2")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]
rotation = 1.5708

[node name="Marker2D1" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(19, -127)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(9, -125)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(29, -125)

[node name="GrenadeStartPositions" type="Node2D" parent="."]
rotation = 1.5708

[node name="Marker2D1" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(19, -127)

[node name="Marker2D2" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(9, -125)

[node name="Marker2D3" type="Marker2D" parent="GrenadeStartPositions"]
position = Vector2(29, -125)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
